Add node app, config file and update readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Do not commit your own config file
+config.json
+
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
